--- a/mysite/main/templates/main/base.html
+++ b/mysite/main/templates/main/base.html
@@ -1,9 +1,11 @@
 <html>
 <head>
-    <title>Greg's Website</title>
+    <title>{% block title %} Greg's Website {% endblock %}</title>
 </head>
 <body>
-    <p>{{name}}</p>
-
+    <div id ="content", name="content">
+    {% block content %}
+    {% endblock %}
+    </div>
 </body>
 </html>
