--- a/mysite/main/templates/main/home.html
+++ b/mysite/main/templates/main/home.html
@@ -1,5 +1,12 @@
 {% extends 'main/base.html' %}
 
+{% block title %}
+Home
+{% endblock %}
+
+{% block content %}
+<h1>Home Page</h1>
+{% endblock %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
