Added form button and converted page to list format to display sequentially.

--- a/mysite/main/templates/main/create.html
+++ b/mysite/main/templates/main/create.html
@@ -6,7 +6,7 @@
 Create Page
 
 <form method="post" action="/create/">
-    {{form}}
+    {{form.as_ul}}
     <button type="submit", name="save">Create New List</button>
 </form>
 
