Added Django, Boostrap, and sidebar navigation to the website.

--- a/mysite/main/templates/main/create.html
+++ b/mysite/main/templates/main/create.html
@@ -3,11 +3,16 @@
 {% block title %} Create New List {% endblock %}
 
 {% block content %}
-Create Page
+<h3>Create Page</h3>
 
-<form method="post" action="/create/">
-    {{form.as_ul}}
-    <button type="submit", name="save">Create New List</button>
+<form method="post" action="/create/" class="form-group">
+    {% csrf_token %}
+    <div class="input-group mb-3">
+        <div class="input-group-prepend">
+        <button type="submit", name="save" class="btn btn-success">Create New List</button>
+        </div>
+        {{form.name}}
+    </div>
 </form>
 
 {% endblock %}
